k8s/web/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-web
  namespace: suntransit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-web
  template:
    metadata:
      labels:
        app: flask-web
    spec:
      enableServiceLinks: false
      containers:
        - name: flask
          image: suntransit/flask:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
