k8s/web/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-web
  namespace: suntransit
spec:
  selector:
    app: flask-web
  ports:
    - port: 80
      targetPort: 80
